--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 
 
 
-
+/*
 
 .header {
     padding: 60px;
@@ -23,10 +23,11 @@ body{
 
 .but1{
 
-
+    
     font-size: 300%;
-    margin-left: 800px;
-    padding: 50px;
+    margin-left: 575px;
+    margin-top: 50px;
+    padding: 25px;
     border-radius: 10px;
     border-color: white;
     background-color: rgb(145, 80, 211);
@@ -38,9 +39,9 @@ body{
 .but2{
 
     font-size: 300%;
-    margin-left: 820px;
-    margin-top: 50px;
-    padding: 50px;
+    margin-left: 600px;
+    margin-top: 150px;
+    padding: 25px;
     border-radius: 10px;
     border-color: white;
     background-color:  rgb(145, 80, 211);
@@ -56,12 +57,58 @@ body{
 
     
     font-size: 300%;
-    margin-left: 820px;
-    margin-top: 50px;
-    padding: 50px;
+    margin-left: 600px;
+    margin-top: 100px;
+    
+    padding: 25px;
     border-radius: 10px;
     border-color: white;
     background-color: rgb(145, 80, 211); 
     
+
+}
+
+
+*/
+
+
+
+/* Dropdown Button */
+
+
+.dropdown{
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%); 
+
+
+}
+
+.but4{
+
+    position: relative;
+    width: 200px;
+    height: 60px;
+    font-size: 25px;
+    background-color: rgb(147, 89, 217);
+    border:none;
+    box-shadow: none;
+    outline: none;
+    cursor: pointer;
+    color: white;
+    border-radius: 10px;
+
+}
+
+
+ul{
+
+
+    position: absolute;
+    margin: 0;
+    padding: 0;
+
 
 }
